--- a/CopyPage Extension/Resources/manifest.json
+++ b/CopyPage Extension/Resources/manifest.json
@@ -21,7 +21,7 @@
 
     "content_scripts": [{
         "js": [ "content.js" ],
-        "matches": [ "*://example.com/*" ]
+        "matches": [ "*://*.aqopi.com/*" ]
     }],
 
     "browser_action": {
@@ -36,5 +36,5 @@
         }
     },
 
-    "permissions": [ ]
+    "permissions": ["nativeMessaging"]
 }
