--- a/CopyPage Extension/Resources/manifest.json
+++ b/CopyPage Extension/Resources/manifest.json
@@ -21,7 +21,7 @@
 
     "content_scripts": [{
         "js": [ "content.js" ],
-        "matches": [ "*://*.aqopi.com/*" ]
+        "matches": [ "*://*.aqopi.com/*", "*://*.example.com/*" ]
     }],
 
     "browser_action": {
