--- a/CopyPage/Resources/Info.plist
+++ b/CopyPage/Resources/Info.plist
@@ -12,6 +12,16 @@
 				<string>prefs</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.copypage.overview</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>copypage</string>
+			</array>
+		</dict>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
