Fix deeplink for disabled application

--- a/CopyPage/Resources/Info.plist
+++ b/CopyPage/Resources/Info.plist
@@ -15,6 +15,8 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>CFBundleURLIconFile</key>
+			<string></string>
 			<key>CFBundleURLName</key>
 			<string>com.copypage.overview</string>
 			<key>CFBundleURLSchemes</key>
